--- a/backend/package.json
+++ b/backend/package.json
@@ -7,16 +7,23 @@
     "start": "node ./app.js"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.1",
+    "apollo-server-core": "^3.5.0",
+    "apollo-server-express": "^3.5.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
-    "express": "~4.16.1",
+    "express": "^4.17.1",
+    "graphql": "^15.7.2",
+    "graphql-subscriptions": "^2.0.0",
     "ioredis": "^4.27.9",
     "mongoose": "^6.0.7",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12",
-    "redis": "^4.0.0-rc.2"
+    "redis": "^4.0.0-rc.2",
+    "subscriptions-transport-ws": "^0.11.0",
+    "web-push": "^3.4.5"
   },
   "engines": {
     "node": "16.x"
