--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "proxy": "http://localhost:4000",
   "dependencies": {
+    "@apollo/client": "^3.5.5",
     "@craco/craco": "^6.4.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "@tailwindcss/line-clamp": "^0.2.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "graphql": "^16.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "simple-line-icons": "^2.5.5",
+    "subscriptions-transport-ws": "^0.11.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
